--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
           <img class="logo" src="/images/logotip.svg" alt="Логотип Device">
           </a>
           <ul class="navigation-list">
-            <li class="navigation-item">
+            <li class="navigation-item navigation-form">
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
               <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
               <button class="button-search" type="submit">Найти</button>
               </form>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-item navigation-login">
               <a class="navigation-link" href="#">Войти</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Сравнить</a>
+              <a class="navigation-link navigation-compare" href="#">Сравнить</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">Корзина</a>
             </li>
           </ul>
           <ul class="navigation-list">
-            <li class="navigation-item">
+            <li class="navigation-item navigation-catalog">
               <a class="navigation-services" href="#">Каталог товаров</a>
               <span>+</span>
             </li>
