--- a/catalog.html
+++ b/catalog.html
@@ -131,13 +131,31 @@
               </select>
               <ul class="button-updown">
                 <li class="updown-item">
-                  <a class="button" href="#" >
-                    <span class="visually-hidden">Вверх</span>
+                  <a class="sorting-button-updown" href="#" >
+                    <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                      <g opacity="0.2" clip-path="url(#clip0_26965_679)">
+                      <path d="M6 0L11.5 10H0.5" fill="black"/>
+                      </g>
+                      <defs>
+                      <clipPath id="clip0_26965_679">
+                      <rect width="11" height="10" fill="white" transform="translate(0.5)"/>
+                      </clipPath>
+                      </defs>
+                    </svg>
                   </a>
                 </li>
                 <li class="updown-item">
-                  <a class="button" href="#">
-                    <span class="visually-hidden">Вниз</span>
+                  <a class="sorting-button-updown" href="#">
+                    <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                      <g opacity="0.2" clip-path="url(#clip0_26965_682)">
+                      <path d="M6 10L0.499999 9.61651e-07L11.5 0" fill="black"/>
+                      </g>
+                      <defs>
+                      <clipPath id="clip0_26965_682">
+                      <rect width="11" height="10" fill="white" transform="translate(11.5 10) rotate(180)"/>
+                      </clipPath>
+                      </defs>
+                    </svg>
                   </a>
                 </li>
             </div>
@@ -176,7 +194,7 @@
             <ul class="pagination">
               <li class="pagination-item">
                 <a class="pagination-link pagination-prev pagination-disabled" href="#">
-                  <span class="pagination-forward">Назад</span>
+                  <span class="pagination-back">Назад</span>
                 </a>
               </li>
               <li class="pagination-item">
@@ -196,7 +214,7 @@
               </li>
               <li class="pagination-item">
                 <a class="pagination-link pagination-next" href="#">
-                  <span class="pagination-back">Вперед</span>
+                  <span class="pagination-forward">Вперед</span>
                 </a>
               </li>
             </ul>
