--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <header class="main-header">
-        <nav class="navigation">
+        <nav class="navigation navigation-main">
           <h1 class="visually-hidden">Device</h1>
           <a class="logo-link" href = "#">
           <img class="logo" src="/images/logotip.svg" alt="Логотип Device">
@@ -105,7 +105,7 @@
                 <div class="slider-block">
                   <h2 class="slider-heading">Порхает как бабочка,жалит как пчела!</h2>
                   <p class="slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-                  <a class="slider-link" href="#">Подробнее</a>
+                  <a class="button" href="#">Подробнее</a>
                   <ul class="slider-specifications-list">
                     <li class="slider-specifications-item">
                       <b class="slider-specifications">800 м</b><span class="slider-description">Дальность полета</span>
@@ -153,11 +153,13 @@
             <ul class="catalog-list">
               <li class="catalog-item">
                 <a class="catalog-item-link" href="#">
-                  <svg class="catalog-item-icon" width="97" height="55" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M84.1314 32.639V20.003C84.1314 18.694 85.1764 17.633 86.4664 17.633L94.7924 19.214V11.02C94.7924 8.66497 93.0844 7.58897 90.5904 6.75497L67.4034 0.174968C69.0194 1.56597 69.2924 2.21497 69.2924 4.57097V49.78C69.2924 52.136 68.8424 53.846 67.3254 54.99L90.5904 47.925C92.9914 47.092 94.7924 43.709 94.7924 41.353V33.44L86.4664 35.007C85.1764 35.009 84.1314 33.947 84.1314 32.639Z" fill="#363636"/>
-                    <path d="M95.1294 20.979L87.5314 19.535C86.5234 19.535 85.7074 20.364 85.7074 21.386V31.254C85.7074 32.277 86.5234 33.106 87.5314 33.106L95.1294 31.675C96.2834 31.256 96.9534 30.846 96.9534 29.823V22.83C96.9534 21.808 96.1874 21.323 95.1294 20.979Z" fill="#363636"/>
-                    <path d="M67.1704 4.48297C67.1704 -0.597033 62.9384 0.0239677 62.9384 0.0239677C62.9384 0.0239677 5.83241 4.73797 2.83841 5.14497C-0.155585 5.55197 0.00141458 9.53197 0.00141458 9.53197C0.00141458 9.53197 0.000414578 42.069 0.000414578 45.812C0.000414578 49.555 2.59941 49.565 2.59941 49.565L19.0764 50.968L27.2124 39.3C27.2124 39.3 28.3214 37.472 29.7174 37.472C31.1144 37.472 32.1494 39.333 32.1494 39.333L41.2104 52.854C41.2104 52.854 60.1054 54.763 63.7314 54.763C67.3574 54.762 67.1704 49.739 67.1704 49.739C67.1704 49.739 67.1704 9.56297 67.1704 4.48297ZM12.9824 37.192C9.28442 37.192 6.28641 32.591 6.28641 26.917C6.28641 21.243 9.28442 16.642 12.9824 16.642C16.6804 16.642 19.6784 21.243 19.6784 26.917C19.6784 32.591 16.6804 37.192 12.9824 37.192ZM49.1404 38.618C44.4784 38.618 40.6994 33.379 40.6994 26.917C40.6994 20.454 44.4794 15.215 49.1404 15.215C53.8024 15.215 57.5824 20.454 57.5824 26.917C57.5824 33.379 53.8024 38.618 49.1404 38.618Z" fill="#363636"/>
-                  </svg>
+                  <span class="catalog-item-icon">
+                    <svg width="97" height="55" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M84.1314 32.639V20.003C84.1314 18.694 85.1764 17.633 86.4664 17.633L94.7924 19.214V11.02C94.7924 8.66497 93.0844 7.58897 90.5904 6.75497L67.4034 0.174968C69.0194 1.56597 69.2924 2.21497 69.2924 4.57097V49.78C69.2924 52.136 68.8424 53.846 67.3254 54.99L90.5904 47.925C92.9914 47.092 94.7924 43.709 94.7924 41.353V33.44L86.4664 35.007C85.1764 35.009 84.1314 33.947 84.1314 32.639Z" fill="#363636"/>
+                      <path d="M95.1294 20.979L87.5314 19.535C86.5234 19.535 85.7074 20.364 85.7074 21.386V31.254C85.7074 32.277 86.5234 33.106 87.5314 33.106L95.1294 31.675C96.2834 31.256 96.9534 30.846 96.9534 29.823V22.83C96.9534 21.808 96.1874 21.323 95.1294 20.979Z" fill="#363636"/>
+                      <path d="M67.1704 4.48297C67.1704 -0.597033 62.9384 0.0239677 62.9384 0.0239677C62.9384 0.0239677 5.83241 4.73797 2.83841 5.14497C-0.155585 5.55197 0.00141458 9.53197 0.00141458 9.53197C0.00141458 9.53197 0.000414578 42.069 0.000414578 45.812C0.000414578 49.555 2.59941 49.565 2.59941 49.565L19.0764 50.968L27.2124 39.3C27.2124 39.3 28.3214 37.472 29.7174 37.472C31.1144 37.472 32.1494 39.333 32.1494 39.333L41.2104 52.854C41.2104 52.854 60.1054 54.763 63.7314 54.763C67.3574 54.762 67.1704 49.739 67.1704 49.739C67.1704 49.739 67.1704 9.56297 67.1704 4.48297ZM12.9824 37.192C9.28442 37.192 6.28641 32.591 6.28641 26.917C6.28641 21.243 9.28442 16.642 12.9824 16.642C16.6804 16.642 19.6784 21.243 19.6784 26.917C19.6784 32.591 16.6804 37.192 12.9824 37.192ZM49.1404 38.618C44.4784 38.618 40.6994 33.379 40.6994 26.917C40.6994 20.454 44.4794 15.215 49.1404 15.215C53.8024 15.215 57.5824 20.454 57.5824 26.917C57.5824 33.379 53.8024 38.618 49.1404 38.618Z" fill="#363636"/>
+                    </svg>
+                  </span>
                   <b class="catalog-name">Виртуальная реальность</b>
                 </a>
               </li>
@@ -168,7 +170,7 @@
                     <path d="M54.654 0H31.497V2.758H54.654V0Z" fill="#363636"/>
                     <path d="M46.608 64.861V61.888H54.654V59.13H31.498V61.888H39.543V97.134C37.404 98.072 35.908 100.206 35.908 102.693V117H50.243V102.693C50.243 100.207 48.748 98.072 46.607 97.136V69.146H51.403L56.454 70.359V63.648L51.403 64.861H46.608Z" fill="#363636"/>
                   </svg>
-                  <b class="catalog-name">Моноподы для селфи</b>
+                  <b class="catalog-name">Моноподы </br>для селфи</b>
                 </a>
               </li>
               <li class="catalog-item">
@@ -228,13 +230,13 @@
           <div class="page-container-services">
             <ul class="services-list-button">
               <li class="list-button-item">
-                <button class="button-services" type="submit">Доставка</button>
+                <button class="button" type="button">Доставка</button>
               </li>
               <li class="list-button-item">
-                <button class="button-services" type="submit">Гарантия</button>
+                <button class="button" type="button">Гарантия</button>
               </li>
               <li class="list-button-item">
-                <button class="button-services" type="submit">Кредит</button>
+                <button class="button" type="button">Кредит</button>
               </li>
             </ul>
             <ul class="services-list">
