--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
 
     <header class="main-header">
-      <nav class="navigation">
+      <nav class="navigation navigation-main">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
         <img class="logo" src="/images/logotip.svg" alt="Логотип Device">
@@ -17,24 +17,49 @@
         <ul class="navigation-list">
           <li class="navigation-item navigation-form">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+            <svg class="navigation-icon" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.7278 14.3L12.6278 11.2C13.5278 10 14.0278 8.6 14.0278 7C14.0278 3.1 10.9278 0 7.02777 0C3.12777 0 0.027771 3.1 0.027771 7C0.027771 10.9 3.12777 14 7.02777 14C8.62777 14 10.0278 13.5 11.2278 12.6L14.3278 15.7C14.5278 15.9 14.7278 16 15.0278 16C15.6278 16 16.0278 15.6 16.0278 15C16.0278 14.8 15.9278 14.5 15.7278 14.3ZM2.02777 7C2.02777 4.2 4.22777 2 7.02777 2C9.82777 2 12.0278 4.2 12.0278 7C12.0278 9.8 9.82777 12 7.02777 12C4.22777 12 2.02777 9.8 2.02777 7Z" fill="black"/>
+            </svg>
             <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
             <button class="button-search" type="submit">Найти</button>
             </form>
           </li>
           <li class="navigation-item navigation-login">
+            <svg class="navigation-icon" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.027771 12H13.0278C12.8278 9.4 10.9278 7.2 8.32777 6.5C9.32777 5.9 10.0278 4.8 10.0278 3.5C10.0278 1.6 8.42777 0 6.52777 0C4.62777 0 3.02777 1.6 3.02777 3.5C3.02777 4.8 3.72777 5.9 4.72777 6.5C2.12777 7.2 0.227771 9.4 0.027771 12Z" fill="black"/>
+            </svg>
             <a class="navigation-link" href="#">Войти</a>
           </li>
           <li class="navigation-item">
+            <svg class="navigation-icon" width="11" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6.02777 0H4.02777V12H6.02777V0Z" fill="black"/>
+              <path d="M2.02777 4H0.027771V12H2.02777V4Z" fill="black"/>
+              <path d="M10.0278 3H8.02777V12H10.0278V3Z" fill="black"/>
+            </svg>
             <a class="navigation-link navigation-compare" href="#">Сравнить</a>
           </li>
           <li class="navigation-item">
+            <svg class="navigation-icon" width="17" height="14" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.3278 5L11.8278 5.2L8.62783 0.3C8.52783 0.1 8.22783 0 8.02783 0C7.82783 0 7.52783 0.1 7.42783 0.3L4.22783 5.2H0.727832C0.327832 5.2 0.027832 5.5 0.027832 5.9C0.027832 6 0.027832 6 0.027832 6.1L1.92783 12.9C2.12783 13.6 2.62783 14 3.32783 14H12.7278C13.4278 14 13.9278 13.6 14.1278 12.9L16.0278 6C16.0278 5.9 16.0278 5.9 16.0278 5.8C16.0278 5.4 15.7278 5 15.3278 5ZM8.02783 1.9L10.2278 5.1H5.92783L8.02783 1.9Z" fill="black"/>
+            </svg>
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
         <ul class="navigation-list">
           <li class="navigation-item navigation-catalog">
             <a class="navigation-services" href="#">Каталог товаров</a>
-            <span>+</span>
+            <span class="navigation-icon-catalog">
+              <svg width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.3" clip-path="url(#clip0_26956_603)">
+                <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_26956_603">
+                <rect width="16" height="16"/>
+                </clipPath>
+                </defs>
+              </svg>
+            </span>
           </li>
           <li class="navigation-item">
             <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
@@ -47,7 +72,7 @@
           </li>
         </ul>
       </nav>
-  </header>
+    </header>
 
 
     <main>
@@ -121,7 +146,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button-vision" type="submit">Показать</button>
+            <button class="button" type="submit">Показать</button>
           </form>
           <div class="catalog-right-column">
             <div class="sorting-container">
@@ -194,7 +219,7 @@
             <ul class="pagination">
               <li class="pagination-item">
                 <a class="pagination-link pagination-prev pagination-disabled" href="#">
-                  <span class="pagination-back">Назад</span>
+                  <span class="pagination-backforward">Назад</span>
                 </a>
               </li>
               <li class="pagination-item">
@@ -214,7 +239,7 @@
               </li>
               <li class="pagination-item">
                 <a class="pagination-link pagination-next" href="#">
-                  <span class="pagination-forward">Вперед</span>
+                  <span class="pagination-backforward">Вперед</span>
                 </a>
               </li>
             </ul>
@@ -231,7 +256,7 @@
           <a class="logo-footer-link" href = "#">
             <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
           </a>
-          <address class="footer-contacts-address">
+          <address class=" ">
             <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
         </div>
@@ -249,26 +274,37 @@
           </ul>
           <ul class="footer-social-network-list">
             <li class="footer-social-network-list-item">
-              <a class="footer-social-network-link" href="#">
-                <img class="footer-social-network-images" src="#" alt="Ссылка на канал в Телеграм">
+              <a class="footer-social-network-links" href="#">
+                <svg class="footer-social-network-telegram" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_26956_1193)">
+                    <path d="M12.4431 0.0735832L0.623071 4.63158C-0.183596 4.95558 -0.178929 5.40558 0.475071 5.60625L3.50974 6.55292L10.5311 2.12292C10.8631 1.92092 11.1664 2.02958 10.9171 2.25092L5.2284 7.38492H5.22707L5.2284 7.38558L5.01907 10.5136C5.32574 10.5136 5.46107 10.3729 5.63307 10.2069L7.10707 8.77358L10.1731 11.0382C10.7384 11.3496 11.1444 11.1896 11.2851 10.5149L13.2977 1.02958C13.5037 0.203583 12.9824 -0.170417 12.4431 0.0735832Z" fill="#444444"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_26956_1193">
+                    <rect width="14" height="12" fill="white"/>
+                    </clipPath>
+                    </defs>
+                </svg>
               </a>
             </li>
             <li class="footer-social-network-list-item">
-              <a class="footer-social-network-link" href="#">
-                <img class="footer-social-network-images" src="#" alt="Ссылка на youtube-канал">
+              <a class="footer-social-network-links" href="#">
+                <svg class="footer-social-network-youtube" width="16" height="11" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.6671 1.67464C15.5765 1.35146 15.4 1.05887 15.1564 0.827973C14.9059 0.589975 14.5989 0.41973 14.2644 0.333306C13.0124 0.00330585 7.99641 0.00330593 7.99641 0.00330593C5.9053 -0.0204856 3.8147 0.0841556 1.73641 0.316639C1.40187 0.409448 1.09545 0.583497 0.844411 0.823306C0.597745 1.06064 0.419078 1.35331 0.325745 1.67397C0.10154 2.8818 -0.00739387 4.1082 0.000411455 5.33664C-0.00758854 6.56397 0.101078 7.78997 0.325745 8.99931C0.417078 9.31864 0.595078 9.60997 0.842411 9.84531C1.08974 10.0806 1.39774 10.2506 1.73641 10.3406C3.00508 10.67 7.99641 10.67 7.99641 10.67C10.0902 10.6938 12.1835 10.5892 14.2644 10.3566C14.5989 10.2702 14.9059 10.1 15.1564 9.86197C15.3999 9.63112 15.5762 9.33849 15.6664 9.01531C15.8965 7.80794 16.0083 6.58103 16.0004 5.35197C16.0177 4.11771 15.906 2.88502 15.6671 1.67397V1.67464ZM6.40174 7.61931V3.05464L10.5751 5.33731L6.40174 7.61931Z" fill="#444444"/>
+                </svg>
               </a>
             </li>
             <li class="footer-social-network-list-item">
-              <a class="footer-social-network-link" href="#">
-                <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Tvitter">
+              <a class="footer-social-network-links" href="#">
+                <svg class="footer-social-network-twitter" width="15" height="15" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9.7 0.155143C11.2 -0.344857 12.3 0.455143 12.9 1.25514C13.4 1.05514 14 0.855143 14.6 0.655143C14.6 1.45514 14.1 2.05514 13.8 2.25514C14.5 2.45514 15 1.85514 15 1.85514C14.9 2.75514 14.1 3.55514 13.6 3.75514C13.4 10.0551 10.8 14.1551 4.7 14.0551C4.2 14.0551 4.8 14.0551 4.3 14.0551C4 14.0551 0.6 13.6551 0 12.2551C2 12.4551 3.4 11.8551 4.1 11.1551C3.3 10.8551 1.7 10.7551 1.5 8.35514C1.8 8.55514 2 8.65514 2.6 8.55514C1.5 7.75514 0.3 7.05514 0.4 5.05514C0.7 5.35514 1.3 5.55514 1.6 5.45514C1 5.25514 -0.2 2.35514 0.8 0.855143C2.4 2.55514 4.1 4.25514 7.1 4.35514C7.3 2.25514 8.1 0.855143 9.7 0.155143Z" fill="#444444"/>
+                </svg>
               </a>
             </li>
           </ul>
         </div>
         <div class="footer-contacts">
-          <address class="footer-contacts-address">
-            <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </address>
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
             <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
           </a>
